<resources>
    <string name="app_name">FilterSample</string>
    <string name="action_reset">Reset</string>

    <string name="user_list_loading_failed">User List Loading Failed.</string>
    <string name="no_user_available">No users available.</string>
    <string name="loading">Loading</string>


    <string name="filters">Filters</string>
    <string name="photo">Photo</string>
    <string name="with_photo">With Photo</string>
    <string name="without_photo"> Without Photo</string>
    <string name="all">All</string>
    <string name="contacts">Contacts</string>

    <string name="in_contacts">In Contact</string>
    <string name="not_in_contacts">Not In Contact</string>
    <string name="favourite">Favourite</string>

    <string name="in_favourite">In Favourite</string>
    <string name="not_in_favourite">Not In Favourite</string>

    <string name="compatibility_score">Compatibility Score</string>

    <string name="age">Age</string>

    <string name="height">Height</string>

    <string name="distance">Distance</string>


</resources>
